--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="image">
-    <img alt="fem" src="abstract.jpg">
+    <img alt="fem" src="space.jpg">
   </div>
   <nav>
     <h1>Welcome back!</h1>
@@ -14,7 +14,8 @@
     <ul>
       <li>~/Life</li>
       <li><a href="https://original.footybite.cc/">Football</a></li>
-      <li><a href="https://www.d2jsp.org/">D2jsp</a></li>
+      <li><a href="https://youtube.com/">Youtube</a></li>
+      <li><a href="https://bilibili.com/">Bilibili</a></li>
       <li><a href="https://cellsummer.github.io">Blog</a></li>
       <li><a href="https://lobste.rs/">Lobste.rs</a></li>
       <li><a href="https://news.ycombinator.com/">HackerNews</a></li>
