--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>~/Startpage</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
   <div class="image">
     <img alt="fem" src="abstract.jpg">
@@ -14,7 +16,7 @@
     <ul>
       <li>~/Life</li>
       <li><a href="https://original.footybite.cc/">Football</a></li>
-      <li><a href="https://www.d2jsp.org/">D2jsp</a></li>
+      <li><a href="https://youtube.com/">Youtube</a></li>
       <li><a href="https://cellsummer.github.io">Blog</a></li>
       <li><a href="https://lobste.rs/">Lobste.rs</a></li>
       <li><a href="https://news.ycombinator.com/">HackerNews</a></li>
@@ -38,7 +40,7 @@
     <ul>
       <li>~/Reddit</li>
       <li><a href="https://reddit.com/r/scala/">r/scala</a></li>
-      <li><a href="https://reddit.com/r/golang/">r/golang</a></li>
+      <li><a href="https://reddit.com/r/wallpapers/">r/wallpapers</a></li>
       <li><a href="https://reddit.com/r/freebsd/">r/freebsd</a></li>
       <li><a href="https://reddit.com/r/unixporn/">r/unixporn</a></li>
       <li><a href="https://reddit.com/r/startpages/">r/startpages</a></li>
@@ -46,4 +48,5 @@
   </nav>
   <script type="text/javascript" src="index.js"></script>
 </body>
+
 </html>
