--- a/index.html
+++ b/index.html
@@ -13,19 +13,21 @@
     <h2 id="date"></h2>
     <ul>
       <li>~/Life</li>
-      <li><a href="https://original.footybite.cc/">Football</a></li>
-      <li><a href="https://www.d2jsp.org/">D2jsp</a></li>
-      <li><a href="https://cellsummer.github.io">Blog</a></li>
+      <li><a href="https://footybite.to/">Football</a></li>
+      <li><a href="https://mail.yahoo.com/">Mail</a></li>
+      <li><a href="https://bilibili.com/">Bilibili</a></li>
+      <li><a href="https://youtube.com">Youtube</a></li>
       <li><a href="https://lobste.rs/">Lobste.rs</a></li>
       <li><a href="https://news.ycombinator.com/">HackerNews</a></li>
     </ul>
     <ul>
-      <li>~/Music</li>
-      <li><a href="https://music.youtube.com/channel/UC4G-AJa7kn8oumI6TT2WXYw/">Aurora</a></li>
-      <li><a href="https://music.youtube.com/channel/UCqcu4xFW9T7kYSll5ch7pvQ/">Bishop Briggs</a></li>
-      <li><a href="https://music.youtube.com/channel/UCRQ62TiRhL6DlwT4yBYNR7w/">Barns Courtney</a></li>
-      <li><a href="https://music.youtube.com/channel/UCcV2wQpCkgb34u4O22WG8Dw/">X Ambasadors</a></li>
-      <li><a href="https://music.youtube.com/channel/UCzwzVFgZa3AS9IPLPfJjf1w/">Lindsey Stirling</a></li>
+      <li>~/RaspberryPi</li>
+      <li><a href="http://192.168.1.14:9090">Dashboard</a></li>
+      <li><a href="http://192.168.1.14:8063">Photos</a></li>
+      <li><a href="http://192.168.1.14:9000">Portainer</a></li>
+      <li><a href="http://192.168.1.14:8080">Pdf-stirling</a></li>
+      <li><a href="http://192.168.1.14:1234">Videos</a></li>
+      <li><a href="http://192.168.1.14:3000">IPTV</a></li>
     </ul>
     <ul>
       <li>~/GitHub</li>
@@ -37,7 +39,7 @@
     </ul>
     <ul>
       <li>~/Reddit</li>
-      <li><a href="https://reddit.com/r/scala/">r/scala</a></li>
+      <li><a href="https://reddit.com/r/wallpapers/">r/wallpapers</a></li>
       <li><a href="https://reddit.com/r/golang/">r/golang</a></li>
       <li><a href="https://reddit.com/r/freebsd/">r/freebsd</a></li>
       <li><a href="https://reddit.com/r/unixporn/">r/unixporn</a></li>
